# ray-tracing

./: .clang-format  CITATION.cff  CMakeLists.txt  README.md  make.bat  ray-tracing.DotSettings  vcpkg-configuration.json  vcpkg.json
CMake/: InitVCPKG.cmake
Docs/: BVH_Improvements.md
RayTracingCPU/: CMakeLists.txt  Main.cpp
RayTracingCPU/Engine/: Application.cpp  Application.h  Image.cpp  Image.h
RayTracingCPU/Math/: AABB.cpp  Constants.cpp  Converters.cpp  Converters.h  CosinePDF.cpp  HittablePDF.cpp  HittablePDF.h  Interval.cpp  MixturePDF.h  ONB.h  SpherePDF.h  Vector3.cpp
RayTracingCPU/Objects/: BVH.cpp  BVH.h  Box.h  ConstantMedium.h  Hittable.h  HittableList.cpp  HittableList.h  Quad.h  RotateY.cpp  Sphere.cpp  Translate.cpp  Translate.h
RayTracingCPU/Render/: Camera.cpp  CheckerTexture.cpp  Dielectric.cpp  Dielectric.h  HitRecord.cpp  HitRecord.h  ImageTexture.h  Isotropic.cpp  Isotropic.h  Lambertian.h  Material.cpp  Material.h  Metal.h  NoiseTexture.cpp  NoiseTexture.h  NoiseTextureCamouflage.cpp  NoiseTextureCamouflage.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  ScatterRecord.cpp  ScatterRecord.h  SolidColor.cpp  Texture.h
RayTracingCPU/Resources/: ray-tracing.rc.in
RayTracingCPU/Scenes/: CornellBoxLightsScene.cpp  RTWeekNextCornellSmokeScene.cpp  RTWeekNextRandomSpheresScene.cpp  RTWeekNextTwoPerlinSpheresScene.cpp  RTWeekOneDefaultScene.cpp  RTWeekRestACornellBoxScene.cpp  RTWeekRestBCornellBoxMirrorScene.cpp  WhiteSperesScene.cpp
RayTracingCPU/UI/: ImGuiHelper.cpp  Layer.h
RayTracingCPU/Utils/: Log.cpp  Log.h  Random.h  StringTools.h
RayTracingGPU/: CMakeLists.txt  Main.cpp  ModelViewController.cpp  ModelViewController.h  README.md  RayTracer.cpp  RayTracer.h
RayTracingGPU/Engine/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  BufferUtil.h  CommandBuffers.cpp  CommandBuffers.h  CommandPool.cpp  CommandPool.h  DebugUtils.cpp  DebugUtils.h  DebugUtilsMessenger.cpp  DebugUtilsMessenger.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorBinding.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetManager.cpp  DescriptorSetManager.h  DescriptorSets.cpp  DescriptorSets.h  Device.cpp  Device.h  DeviceMemory.cpp  DeviceMemory.h  Enumerate.h  Fence.cpp  Fence.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  ImageMemoryBarrier.h  ImageView.cpp  ImageView.h  (+23 more)
RayTracingGPU/Objects/: CornellBox.cpp  CornellBox.h  Model.cpp  Model.h  Procedural.h  Sphere.h  Vertex.h
RayTracingGPU/RayTracing/: AccelerationStructure.cpp  AccelerationStructure.h  Application.cpp  Application.h  BottomLevelAccelerationStructure.cpp  BottomLevelAccelerationStructure.h  BottomLevelGeometry.cpp  BottomLevelGeometry.h  DeviceProcedures.cpp  DeviceProcedures.h  RayTracingPipeline.cpp  RayTracingPipeline.h  RayTracingProperties.cpp  RayTracingProperties.h  ShaderBindingTable.cpp  ShaderBindingTable.h  TopLevelAccelerationStructure.cpp  TopLevelAccelerationStructure.h
RayTracingGPU/Render/: Material.h  Texture.cpp  Texture.h  TextureImage.cpp  TextureImage.h  UniformBuffer.cpp  UniformBuffer.h
RayTracingGPU/Resources/Shaders/: Common.glsl  Graphics.frag  Graphics.vert  Heatmap.glsl  Material.glsl  ProceduralHit.glsl  Random.glsl  RayPayload.glsl  RayTracing.Procedural.rchit  RayTracing.Procedural.rint  RayTracing.rchit  RayTracing.rgen  RayTracing.rmiss  Scatter.glsl  UniformBufferObject.glsl  Vertex.glsl
RayTracingGPU/Scenes/: Scene.cpp  Scene.h  SceneList.cpp  SceneList.h
RayTracingGPU/UI/: UserInterface.cpp  UserInterface.h  UserSettings.h
RayTracingGPU/Utils/: Filesystem.cpp  Glm.h  Log.cpp  Random.h  StbImage.cpp  StbImage.h  StringTools.h  Timers.cpp
Source/: Main.cpp
Source/Math/: AABB.cpp  AABB.h  Constants.h  Converters.cpp  Converters.h  CosinePDF.cpp  CosinePDF.h  HittablePDF.cpp  HittablePDF.h  Interval.cpp  Interval.h  MixturePDF.cpp  MixturePDF.h  ONB.cpp  ONB.h  PDF.cpp  PDF.h  SpherePDF.cpp  SpherePDF.h  Vector3.cpp  Vector3.h
Source/Objects/: BVH.cpp  BVH.h  Box.h  ConstantMedium.cpp  ConstantMedium.h  Hittable.cpp  Hittable.h  HittableList.cpp  HittableList.h  Quad.cpp  Quad.h  RotateY.cpp  RotateY.h  Sphere.cpp  Sphere.h  Translate.cpp  Translate.h
Source/Render/: AABB.cpp  AABB.h  BVH.h  Camera.cpp  Camera.h  CheckerTexture.cpp  CheckerTexture.h  Color.cpp  Color.h  ConstantMedium.h  Dielectric.cpp  Dielectric.h  DiffuseLight.cpp  DiffuseLight.h  HitRecord.cpp  HitRecord.h  Hittable.h  HittableList.h  ImageTexture.cpp  ImageTexture.h  Isotropic.cpp  Isotropic.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metal.cpp  Metal.h  NoiseTexture.cpp  NoiseTexture.h  NoiseTextureCamouflage.cpp  NoiseTextureCamouflage.h  NoiseTextureSmooth.cpp  NoiseTextureSmooth.h  ONB.h  PDF.h  PerlinNoise.cpp  PerlinNoise.h  Quad.h  Ray.cpp  (+11 more)
Source/Scenes/: CornellBoxLightsScene.cpp  RTWeekNextCornellBoxScene.cpp  RTWeekNextCornellSmokeScene.cpp  RTWeekNextDefaultScene.cpp  RTWeekNextEarthScene.cpp  RTWeekNextFinalScene.cpp  RTWeekNextQuadsScene.cpp  RTWeekNextRandomSpheresScene.cpp  RTWeekNextScene.cpp  RTWeekNextSimpleLightScene.cpp  RTWeekNextTwoPerlinSpheresScene.cpp  RTWeekNextTwoSpheresScene.cpp  RTWeekOneDefaultScene.cpp  RTWeekOneFinalScene.cpp  RTWeekOneScene.cpp  RTWeekOneTestScene.cpp  RTWeekRestACornellBoxScene.cpp  RTWeekRestBCornellBoxMirrorScene.cpp  RTWeekRestCCornellBoxGlassScene.cpp  Scene.cpp  Scene.h  WhiteSperesScene.cpp
Source/UI/: Application.cpp  Application.h  ImGuiHelper.cpp  ImGuiHelper.h  Image.cpp  Image.h  Layer.cpp  Layer.h
Source/Utils/: Filesystem.cpp  Filesystem.h  Log.cpp  Log.h  Random.cpp  Random.h  StringTools.cpp  StringTools.h  Timers.cpp  Timers.h  VulkanException.cpp  VulkanException.h
Source/Vulkan/: Application.cpp  Application.h  Image.cpp  Image.h
Vcpkg/triplets/: x64-windows.cmake
resources/: imgui.ini
src/: main.cpp
